k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml -o k8s/
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yaml -o k8s/
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/default: "true"
        io.kompose.service: prometheus
    spec:
      containers:
        - args:
            - --config.file=/etc/prometheus/prometheus.yml
          image: prom/prometheus
          name: prometheus
          ports:
            - containerPort: 9090
              hostPort: 9090
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/prometheus
              name: prometheus-configmap
            - mountPath: /prometheus
              name: prom-data
      restartPolicy: Always
      volumes:
        - name: prometheus-configmap
          configMap:
            name: prometheus-configmap
        - name: prom-data
          persistentVolumeClaim:
            claimName: prom-data
